# netology_basic_cpp

RaceGame/: Boots.cpp  Boots.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  CarpetPlane.cpp  CarpetPlane.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  FlyingVehicle.h  GroundVehicle.cpp  GroundVehicle.h  Race.cpp  Race.h  RaceGame.cpp  Vehicle.cpp  Vehicle.h
l10/first_cmake_project/: CMakeLists.txt  cmake_demo.cpp
l11/FigureDynamicLib/: Diamond.h  Figure.cpp  Figure.h  FigureLib.sln  FigureLib.vcxproj  FigureLib.vcxproj.filters  IsoscelesTriangle.h  Parallelogram.h  Quad.h  RightTriangle.h  Square.h  Triangle.h  WrongFigureException.h
l11/Figures/: Figures.vcxproj
l11/GreetingClient/: CMakeLists.txt  GreetingClient.cpp  GreetingClient.vcxproj  GreetingClient.vcxproj.filters
l11/GreetingLib/: GreetingLib.cpp  GreetingLib.h  GreetingLib.sln  GreetingLib.vcxproj  GreetingLib.vcxproj.filters
l11/MyLeaverLib/: MyLeaverLib.cpp  MyLeaverLib.h  MyLeaverLib.vcxproj  MyLeaverLib.vcxproj.filters
l11_5/FigureDynamicLib/: AllFiguresInterface.cpp  EquilateralTriangle.h  Rectangle.h  Square.h  Triangle.cpp  Triangle.h  WrongFigureException.h
l11_5/Figures/: CMakeLists.txt  Figures.cpp
l2_enum_struct/AddressStruct/: AddressStruct.cpp  AddressStruct.sln  AddressStruct.vcxproj  AddressStruct.vcxproj.filters
l2_enum_struct/BankAccount/: BankAccount.cpp  BankAccount.sln  BankAccount.vcxproj
l2_enum_struct/GuessMonth/: GuessMonth.cpp  GuessMonth.sln  GuessMonth.vcxproj  GuessMonth.vcxproj.filters
l3_classes/Calculator/: Calculator.cpp  Calculator.sln  Calculator.vcxproj
l3_classes/Counter/: Counter.cpp  Counter.sln  Counter.vcxproj
l4/AddressFormatting/: AddressFormatting.cpp  AddressFormatting.sln  AddressFormatting.vcxproj  AddressFormatting.vcxproj.filters  in.txt
l5/Figures/: Figures.cpp  Figures.sln  Figures.vcxproj  Figures.vcxproj.filters
l6/CounterLibrary/: Counter.h  CounterLibrary.cpp  (+3 more)
(+44 files in other folders)
