cmake_minimum_required(VERSION 3.10)
project(RaceGame)
#include_directories(../FigureDynamicLib/)
#file(GLOB FIGURE_LIB_SOURCES "../FigureDynamicLib/*.cpp"
#)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
#add_library(RaceLib SHARED Race.cpp)
add_library(VehicleLib SHARED Race.cpp "Vehicle.cpp" "Camel.cpp" "FastCamel.cpp" "Boots.cpp" "Centaur.cpp" "GroundVehicle.cpp" "CarpetPlane.cpp" "Eagle.cpp" "Broomstick.cpp")
#add_compile_options(-std=c++17)
add_executable(RaceGame RaceGame.cpp)
target_link_libraries(RaceGame VehicleLib)